@@ -18,7 +18,9 @@ ncks [\-3] [\-4] [\-5] [\-6] [\-7]
 [\-c] 
 [\-\-cal]
 [\-\-cdl]
+[\-\-chk_chr]
 [\-\-chk_map]
+[\-\-chk_mss]
 [\-\-chk_nan]
 [\-\-cmp
 .IR cmp_sng ]
