@@ -4,6 +4,10 @@
 	cd ~/nco;git commit -a -m 'Version 5.1.8-alpha03: Giggles';git push
 	git tag -a 5.1.8-alpha03 -m 'ncks --chk_chr, --chk_mss';git push --tags
 
+	* Refactor output of DIWG compliance checks to be more legible,	uniform for diwg_chk
+
+	* Document --chk_chr, --chk_mss, --chk_nan
+
 	* Add nco_chk_mss() to check for missing_value attributes
 
 2023-08-18  Charlie Zender  <zender@uci.edu>
